--- a/style.css
+++ b/style.css
@@ -249,13 +249,13 @@ input, textarea {
     height: 36px;
     margin: 8px 0 16px 0;
     padding-left: 12px;
-    width: 620px;
+    width: 620px; /* 620px */
 }
 input[type=checkbox] {
-   /* justify-content: center; */
-    height: 24px;
-   /* vertical-align: middle; */
-    width: 24px;
+    justify-content: center;
+    height: 16px;
+    vertical-align: middle;
+    width: 16px;
 }
 label {
     font-size: 16px;
@@ -706,14 +706,14 @@ hr {
 
     /* --- contact us --- */ 
     input, textarea {
-        width: 332px;
+        width: 92.8%; /* 348px */
     }
     .form {
         width: 100%;
     }
     .submit_button {
         margin-top: 24px;
-        width: 348px;
+        width: 92.8%;
     }
 
     /* --- Q&A --- */
