經典系列欄位修正

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ nav {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 48px;
     text-align: center;
 }
